se corrigen detalles en la autenticacion y registro del ususario, funcionan sus controladores